sample file and no risk message

--- a/prism-outreach/angular.json
+++ b/prism-outreach/angular.json
@@ -20,7 +20,8 @@
             "tsConfig": "tsconfig.app.json",
              "assets": [
                 "src/assets",
-                "src/uploads"
+                "src/uploads",
+                "src/sample_file"
             ],
             "styles": [
               "node_modules/datatables.net/css/jquery.dataTables.min.css",
